加入第三方库权限申请库的处理

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,17 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        jackOptions {
+            enabled true
+        }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -25,7 +35,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    //(api>=11)  https://github.com/tbruyelle/RxPermissions
+    compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.1@aar'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    //（api>=11） https://github.com/yanzhenjie/AndPermission
+    compile 'com.yanzhenjie:permission:1.0.5'
+    //(api>=14)  https://github.com/mylhyl/AndroidAcp
+    //compile 'com.mylhyl:acp:1.1.7'
 }
